--- a/src/sass/home.sass
+++ b/src/sass/home.sass
@@ -2,7 +2,6 @@
 @import 'geometry'
 @import 'typography'
 
-
 h1
   color: $header-color
   font-family: $header-font-family
@@ -12,11 +11,13 @@ p
   color: $description-color
   font-size: $description-font-size
 
+body
+  border: 0
+  margin: 0
+
 .container
   height: 80%
   width: 80%
 
   canvas
     display: block
-    // width: 100vw
-    // height: 100vh
