we're rendering things on screen

--- a/src/sass/home.sass
+++ b/src/sass/home.sass
@@ -12,12 +12,14 @@ p
   font-size: $description-font-size
 
 body
-  border: 0
+  padding: 0
   margin: 0
 
-.container
-  height: 80%
-  width: 80%
+.error
+  padding: 5px
+  margin: 5px
+  color: red
 
+.container
   canvas
     display: block
