--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FishFlo</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet" />
   <!-- bundle.css is injected here by html-webpack-plugin -->
 </head>
 
 <body>
-  <div class="container" id="canvas-container"></div>
+  <div class="container" id="game"></div>
+  <div class="container" id="debug"></div>
   <!-- bundle.js is injected here by html-webpack-plugin -->
 </body>
 
