now we have cube rotation!

--- a/src/sass/home.sass
+++ b/src/sass/home.sass
@@ -6,6 +6,7 @@ h1
   color: $header-color
   font-family: $header-font-family
   font-size: $header-font-size
+  margin: 0.2rem;
 
 p
   color: $description-color
